# ruin

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  PLAN.md  README.md  index.html  run.sh  shell.nix  vcpkg.json  wasm.sh
.github/workflows/: build-wasm.yaml  build-windows.yaml
cmake/: apt.sh  build-info.cmake
docker/: it.sh  run.sh  test.sh  wasm.sh
ldd/: copy-lib.sh  result.txt  run.sh
misc/: Makefile  copy-asset.mjs  lsan-ignore.txt  pb.sh
misc/asset/: .gitignore  convert-pb.mjs  copy.mjs  local.mjs  package-lock.json  package.json
proto/: asset.proto  common.proto  config.proto  decision.proto  manifest.proto  map.proto  mob.proto  monster.proto  pose.proto  sprite.proto
src/: build.h.in  camera.hpp  config.hpp  game.cpp  game.h  input.hpp  main.cpp  physics.cpp  physics.h  player.hpp  region.hpp  ruin.cpp  ruin.h  sdl-dep.hpp  sdl.cpp  sdl.h  tag.hpp  text.hpp  time.hpp  world.hpp
src/asset/: asset.hpp  character.hpp  common.hpp  config.hpp  convert-sprite.hpp  file-loader.hpp  init.hpp  load-sprite.hpp  load-tileset.hpp  loader.hpp  map.hpp  mob.hpp  monster.hpp  sprite.hpp  texture.hpp  tileset.hpp  util.hpp  zone.hpp
src/common/: control.hpp  def.hpp  pose.hpp  sprite.hpp
src/context/: _def.hpp  control.hpp  entity.hpp  game.hpp  misc.h  monitor.hpp  player.hpp  scene.hpp  window.hpp
src/decision/: decision.hpp
src/game/: event.hpp  game-dep.hpp  game.cpp  game.h  game.hpp  mob.hpp  player.hpp  reg.hpp  scene.hpp  tag.hpp  tmp-player.hpp  world.hpp  zone.hpp
src/map/: island-pos.hpp  island.hpp
src/name/: mob.hpp  sprite.hpp  zone.hpp
src/physics/: PLAN.md  body.hpp  common.hpp  create.hpp  physics.hpp  pos.hpp  rect.hpp  state.hpp  tile.hpp  util.hpp  world.hpp
src/render/: background.hpp  base.hpp  debug.hpp  dep.hpp  gamepad.hpp  info.hpp  map.hpp  monster.hpp  player.hpp  rainbow.hpp  sprite.hpp  terrain-chain.hpp  text.cpp
src/sys/: arg.hpp  spdlog.hpp  ver.hpp
src/terrain/: island-pos.hpp  island.hpp  outline.hpp
src/util/: animation.hpp  color.hpp  counter.hpp  event.hpp  file.hpp  format.hpp  input.hpp  matrix.hpp  path.hpp  pos.hpp  pose.hpp  rand.hpp  sprite.hpp
src/util/material/: utils.cpp
tool/: run.sh
web/: index.html
